@@ -17,76 +17,3 @@ ianjuta-debugger-manager
 <!-- ##### SECTION Stability_Level ##### -->
 
 
-<!-- ##### MACRO IANJUTA_DEBUGGER_MANAGER_ERROR ##### -->
-<para>
-
-</para>
-
-
-
-<!-- ##### STRUCT IAnjutaDebuggerManager ##### -->
-<para>
-
-</para>
-
-
-<!-- ##### STRUCT IAnjutaDebuggerManagerIface ##### -->
-<para>
-
-</para>
-
-@g_iface: 
-@is_active: 
-@is_busy: 
-@start: 
-@stop: 
-
-<!-- ##### FUNCTION ianjuta_debugger_manager_error_quark ##### -->
-<para>
-
-</para>
-
-@Returns: 
-
-
-<!-- ##### FUNCTION ianjuta_debugger_manager_is_active ##### -->
-<para>
-
-</para>
-
-@obj: 
-@err: 
-@Returns: 
-
-
-<!-- ##### FUNCTION ianjuta_debugger_manager_is_busy ##### -->
-<para>
-
-</para>
-
-@obj: 
-@err: 
-@Returns: 
-
-
-<!-- ##### FUNCTION ianjuta_debugger_manager_start ##### -->
-<para>
-
-</para>
-
-@obj: 
-@prog_uri: 
-@source_search_directories: 
-@err: 
-
-
-<!-- ##### FUNCTION ianjuta_debugger_manager_stop ##### -->
-<para>
-
-</para>
-
-@obj: 
-@err: 
-@Returns: 
-
-
