@@ -1,3 +1,8 @@
+2006-08-21  Johannes Schmid <jhs@gnome.org>
+
+	* plugins/symbol-browser/test-class.[cpp/h]
+	Added missing files
+
 2006-08-18  Naba Kumar  <naba@gnome.org>
 
 	* plugins/sourceview/sourceview.c: Emit language-changed signal at the
